[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bismuthsdk"
dynamic = ["version"]
description = 'SDK for Bismuth'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Nick Gregory", email = "nick@bismuth.cloud" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "httpx==0.28.1",
  "pydantic==2.10.6",
  "GitPython==3.1.44",
]

[project.urls]
Documentation = "https://github.com/BismuthCloud/bismuthsdk#readme"
Issues = "https://github.com/BismuthCloud/bismuthsdk/issues"
Source = "https://github.com/BismuthCloud/bismuthsdk"

[tool.hatch.version]
path = "src/bismuthsdk/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bismuthsdk tests}"

[tool.coverage.run]
source_pkgs = ["bismuthsdk", "tests"]
branch = true
parallel = true
omit = [
  "src/bismuthsdk/__about__.py",
]

[tool.coverage.paths]
bismuthsdk = ["src/bismuthsdk", "*/bismuthsdk/src/bismuthsdk"]
tests = ["tests", "*/bismuthsdk/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
